--- a/P4_Virtual_Tourist/Base.lproj/Main.storyboard
+++ b/P4_Virtual_Tourist/Base.lproj/Main.storyboard
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15A278b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15A278b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="2O6-XR-TAo">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Virtual Tourist Map View-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="P4_Virtual_Tourist" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="Virtual Tourist Map View" id="BYZ-38-t0r" customClass="ViewController" customModule="P4_Virtual_Tourist" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +16,69 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="sZb-nC-UbF">
+                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                            </mapView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="sZb-nC-UbF" secondAttribute="bottom" id="DEt-1b-BtM"/>
+                            <constraint firstItem="sZb-nC-UbF" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="HFN-uF-gcl"/>
+                            <constraint firstItem="sZb-nC-UbF" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="h6R-Wz-AzN"/>
+                            <constraint firstItem="sZb-nC-UbF" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="wzg-p4-EWw"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="fUQ-Ee-5n6">
+                        <barButtonItem key="rightBarButtonItem" title="Edit" id="5ng-of-rxg"/>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="mapView" destination="sZb-nC-UbF" id="BXO-WM-hvI"/>
+                        <segue destination="Cge-VX-Xrp" kind="show" identifier="showDetail" id="c96-JU-kRN"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="851" y="462"/>
+        </scene>
+        <!--Details-->
+        <scene sceneID="zNC-zg-ikN">
+            <objects>
+                <navigationController title="Details" id="2O6-XR-TAo" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="mn6-GP-K9F">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="P0N-Rs-aND"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="GJx-Py-6Rh" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="145" y="462"/>
+        </scene>
+        <!--Detail View-->
+        <scene sceneID="gGR-Vh-xG9">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="BUZ-Lv-2pF" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController title="Detail View" id="Cge-VX-Xrp" customClass="DetailsViewController" customModule="P4_Virtual_Tourist" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="0gJ-rm-tU7"/>
+                        <viewControllerLayoutGuide type="bottom" id="M6t-Rh-FNC"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="d8y-w2-5SB">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="8wh-yT-yCx">
+                                <rect key="frame" x="164" y="109" width="240" height="128"/>
+                            </mapView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+            </objects>
+            <point key="canvasLocation" x="1560" y="462"/>
         </scene>
     </scenes>
 </document>
